2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Externalized strings for the "Restore Default Register Groups" action.
	* RestoreDefaultRegisterGroupsActionDelegate.java
	* ActionMessages.properties

2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support for the "Restore Default Register Groups" action.
	+ RestoreDefaultRegisterGroupsActionDelegate.java
	* plugin.properties
	* plugin.xml

2005-06-07 Mikhail Khodjaiants
	New images for mapping source containers.
	* icons/obj16/mapentry_obj.gif
	* icons/obj16/mapping_obj.gif
	+ icons/wizban/mapentry_obj.gif
	+ icons/wizban/mapping_obj.gif
	* CDebugImages.java
	* PathMappingDialog.java

2005-06-07 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support fo the "Edit Register Group" action.
	* AbstractViewActionDelegate.java
	* ActionMessages.properties
	* AddRegisterGroupActionDelegate.java
	+ EditRegisterGroupActionDelegate.java
	* plugin.properties
	* plugin.xml

2005-05-31 Mikhail Khodjaiants
	Bug 84816: The modification of the signal properties should be done in the background.
	* SignalPropertyPage.java

2005-05-24 Mikhail Khodjaiants
	Bug 88558: run-to-line not thread oriented.
	The "Run to Line" action should be enabled on stack frames and threads, not on targets.
	* RunToLineAdapter.java

2005-05-20 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	UI to add/remove user-defined groups.
	* ICDebugHelpContextIds.java
	* ActionMessages.properties
	+ AddRegisterGroupActionDelegate.java
	+ RegisterGroupDialog.java
	+ RemoveRegisterGroupActionDelegate.java
	* plugin.properties
	* plugin.xml

2005-05-09 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	Removed unused images.
	- icons/dtool16/adddirsource_wiz.gif
	- icons/dtool16/addprjsource_wiz.gif
	- icons/etool16/adddirsource_wiz.gif
	- icons/etool16/addprjsource_wiz.gif
	- icons/wizban/add_dir_source_location_wiz.gif